# rusty_cryptography_kit

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: atbash_cipher.rs  caeser_cipher.rs  ceaser_cipher.rs  english_support.rs  lib.rs  one_time_pad.rs  rot13.rs  vigenere_cipher.rs
src/detection/: detect_english.rs  mod.rs  trie.rs
