[package]
name = "rusty_cryptography_kit"
version = "0.1.0"
edition = "2021"

[lib]
name = "rusty_cryptography_kit"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
rand = "0.9.0-alpha.1"
base64 = "0.22.0"
once_cell = "1.19.0"
